# SWIFT

./: .gitignore  README.md  main.py  pyproject.toml
Gutierrez/: gt_coldstress_recreation.ipynb  gt_recreation.ipynb
Parman/: Scratch_Example4.py  era5_downloader.py  keys.txt  parman_analysis.ipynb
