[project]
name = "swift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2026.6.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "netcdf4>=1.7.4",
    "numpy>=2.5.0",
    "rioxarray>=0.22.0",
    "xarray>=2026.4.0",
]
