[project]
name = "swift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "dask>=2026.6.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "netcdf4>=1.7.4",
    "numpy>=2.5.0",
    "requests>=2.34.2",
    "rioxarray>=0.22.0",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "xarray>=2026.4.0",
    "xgboost>=3.3.0",
    "zarr>=3.2.1",
]
